--- a/README
+++ b/README
@@ -44,6 +44,9 @@ This will create:
 
 Port Notes:
 
+----- version 1.2.0-2 -----
+Disable an unavailable feature, hopefully preventing some crashes.
+
 ----- version 1.2.0-1 -----
 Initial release for Cygwin 1.7.
 
